# mosquitto-auth-plugin

./: CMakeLists.txt  LICENSE  mosquitto.conf
cmake/modules/: FindMosquitto.cmake  FindScrypt.cmake
src/: data.h  main.cpp  options.cpp  options.h  plugin.cpp  plugin.h  repository.h  repository_file.cpp  repository_file.h
